# bigquery-sqlalchemy-tutorial

./: .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
application/: __init__.py  bigquery_client.py  mysql_client.py
biquery_sql_etl/: __init__.py  client.py  queries.py
biquery_sql_etl/engines/: __init__.py  bigquery.py  rdbms.py
biquery_sql_etl/sources/: __init__.py  client.py
biquery_sql_etl/sources/bigquery/: __init__.py  bigquery_client.py
biquery_sql_etl/sources/sqldatabase/: __init__.py  database_client.py
config/: bigquery_config.py  sql_config.py
queries/: analytics.sql
sql/: monthly.sql  weekly.sql
src/: __init__.py  bigquery.py  database.py
src/queries/: __init__.py  read.py
src/queries/sql/: monthly.sql
src/sources/: __init__.py  client.py
src/sources/bigquery/: __init__.py  bigquery_client.py
src/sources/database/: __init__.py  database_client.py
src/util/: read.py
