[tool.poetry]
name = "biquery_sql_etl"
version = "1.0.0"
description = "Light ETL script to migrate data from BigQuery to SQL and vice-versa."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/bigquery-and-sql-databases/"
repository = "https://github.com/hackersandslackers/bigquery-sqlalchemy-tutorial/"
documentation = "https://hackersandslackers.com/bigquery-and-sql-databases/"
keywords = ["BigQuery",
            "SQL",
            "SQLAlchemy",
            "ETL",
            "Google Cloud"]

[tool.poetry.dependencies]
Python = "^3.8"
SQLAlchemy = "*"
PyBigQuery = "*"
PyMySQL = "*"
Loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/bigquery-sqlalchemy-tutorial/issues"
